package com.monoscode.hortahub.entidades;

public class Endereco {
    private String cep;
    private int numero;
    private String referencia;
    private String logradouro;
}
