package com.monoscode.hortahub.enums;

public enum Plano {

    HortiOne,
    Essencial,
    HortiLife,
    HortiProPlus;

}
